--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -173,9 +173,10 @@
     <LinearLayout
         android:id="@+id/alarm"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -183,14 +184,17 @@
             android:text="푸시 알람 설정"
             android:textSize="15sp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:height="30dp"/>
+
     </LinearLayout>
     <LinearLayout
         android:id="@+id/setting"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="?attr/selectableItemBackground"
+        android:orientation="vertical"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -198,16 +202,35 @@
             android:text="자동업로드 설정"
             android:textSize="15sp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"/>
-        <Space
+            android:textColor="@color/black"
+            android:height="30dp"/>
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/ic_next"/>
+            android:layout_height="wrap_content">
+
+            <Switch
+                android:id="@+id/auto_upload_switch"
+                android:paddingStart="20dp"
+                android:paddingEnd="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="자동 업로드"
+                android:textSize="14sp"/>
+
+            <Switch
+                android:id="@+id/use_data_switch"
+                android:paddingStart="20dp"
+                android:paddingEnd="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="모바일 데이터 사용 설정"
+                android:textColor="@color/black"
+                android:textSize="14sp"/>
+        </LinearLayout>
     </LinearLayout>
     <TextView
         android:layout_marginTop="4dp"
