--- a/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
@@ -18,7 +18,7 @@
         android:id="@+id/preview"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/no_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,23 +28,24 @@
         android:id="@+id/family_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginRight="20dp" />
+        android:padding="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        />
 
     <TextView
         android:id="@+id/my"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textSize="30sp"
+        android:layout_marginTop="10dp"
+        android:textSize="25sp"
         android:text="나" />
 
     <Button
         android:id="@+id/save_member"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:text="등록하기"
