--- a/damda/app/src/main/res/layouts/activity/layout/list_item_gender.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_gender.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:text="asdf"
     android:gravity="center"
+    android:textAlignment="center"
     android:textColor="@android:color/black"
     android:textSize="15sp" />
