--- a/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
@@ -57,10 +57,11 @@
     <TextView
         android:id="@+id/make_album"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="선택할 수 있는\n앨범이 없습니다."
+        android:gravity="center"
         android:visibility="gone"
-        android:layout_gravity="center_vertical"
+        android:textAlignment="center"
         android:layout_marginRight="15dp"
         />
     <Spinner
