--- a/damda/app/src/main/res/layouts/activity/layout/list_item_child_quiz.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_child_quiz.xml
@@ -81,7 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="문제가 없어요. 부모님에게 연락해서 문제를 내달라고 해보세요!!"
+        android:textAlignment="center"
+        android:text="문제가 없어요 :(\n부모님에게 연락해서 문제를 내달라고 해보세요!!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
