--- a/damda/app/src/main/res/layouts/activity/layout/fragment_mission.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_mission.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_mission"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="42dp">
 
         <TextView
             android:id="@+id/tv_name"
@@ -51,6 +51,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/progress"
+        android:max="100"
+        android:progress="50"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:progressDrawable="@drawable/progressbar_custom"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"/>
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_below="@+id/cl_mission"
