--- a/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
@@ -1,74 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginRight="8dp"
-    android:background="#E4DADA"
-    android:scrollbarSize="15dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="3"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_gravity="center_vertical"
         android:text="미션 임파서블"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_progress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:layout_width="0.5dp"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:background="@color/gray"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/cl_mission"
-        android:layout_width="109dp"
-        android:layout_height="92dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="0dp"
-        android:background="#817878"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginEnd="5dp"
         android:visibility="visible"
+        android:orientation="vertical"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pb_mission"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btn_checkmission"
-            android:layout_width="88dp"
-            android:layout_height="25dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/ripple_effect"
-            android:backgroundTint="#86FFEB3B"
-            android:backgroundTintMode="src_over"
-            android:hapticFeedbackEnabled="true"
-            android:text="바로가기"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_point"
+        <LinearLayout
+            android:id="@+id/point_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/btn_mission"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:text="15Point"
-            android:textAlignment="center"
-            android:textColor="#FFEB3B"
-            app:layout_constraintBottom_toTopOf="@+id/btn_mission"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginBottom="5dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/heart"/>
+            <TextView
+                android:id="@+id/tv_point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginBottom="1dp"
+                android:textColor="#FC5A95"
+                app:layout_constraintBottom_toTopOf="@+id/btn_mission"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+
 
         <Button
             android:id="@+id/btn_mission"
@@ -82,7 +83,7 @@
             android:backgroundTint="#AB2196F3"
             android:text="포인트 받기"
             android:textSize="12sp"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -118,46 +119,17 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="RtlCompat" />
+        <TextView
+            android:id="@+id/btn_checkmission"
+            android:layout_width="wrap_content"
+            android:layout_height="23dp"
+            android:backgroundTintMode="src_over"
+            android:hapticFeedbackEnabled="true"
+            android:text="미션하기"
+            android:textColor="#000000"
+            android:visibility="visible" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/pb_mission"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="242dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="10dp"
-        android:layout_toStartOf="@+id/relativeLayout"
-        android:progress="50"
-        android:progressTint="#00BCD4"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_progress"
-        android:layout_width="236dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/pb_mission"
-        android:layout_alignTop="@+id/pb_mission"
-        android:layout_alignEnd="@+id/pb_mission"
-        android:layout_alignBottom="@+id/pb_mission"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="1dp"
-        android:gravity="center"
-        android:text="0 / 1"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/pb_mission"
-        app:layout_constraintEnd_toEndOf="@+id/pb_mission"
-        app:layout_constraintStart_toStartOf="@+id/pb_mission"
-        app:layout_constraintTop_toTopOf="@+id/pb_mission" />
-
-</RelativeLayout>
+</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
