--- a/damda/app/src/main/res/layouts/activity/layout/activity_find_password.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_find_password.xml
@@ -7,16 +7,21 @@
     tools:context=".activity.LoginActivity">
     <ImageView
         android:paddingTop="4dp"
-        android:layout_above="@+id/signin_layout"
+        android:layout_above="@+id/scroll"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/logo_title"/>
-
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/signin_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -47,7 +52,6 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/changePWDLayout"
             android:layout_width="match_parent"
-            android:layout_weight="2"
             android:hint="임시 비밀번호"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
@@ -104,4 +108,5 @@
             android:layout_marginBottom="30dp"
             android:text="비밀번호 변경하기"/>
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
