--- a/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
@@ -28,8 +28,8 @@
         android:id="@+id/family_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dp"
-        android:layout_marginLeft="10dp"
+        android:padding="1dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="10dp"
         />
 
