--- a/damda/app/src/main/res/layouts/activity/layout/activity_edit_user.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_edit_user.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.FamilyListActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -15,28 +15,30 @@
 
     <LinearLayout
         android:id="@+id/signin_layout"
-        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical">
 
         <TextView
-            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이메일"
-            />
+            android:layout_marginTop="10dp"
+            android:paddingStart="4dp"
+            android:text="이메일" />
+
         <TextView
             android:id="@+id/editEmail"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="20dp"
+            android:paddingStart="4dp"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,60 +47,62 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/nameLayout"
                 android:layout_width="0dp"
-                android:layout_weight="2"
-                android:hint="이름"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:layout_weight="2"
+                android:hint="이름">
 
                 <EditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:maxLines="1"
-                    android:maxLength="20"
-                    android:inputType="text"
                     android:layout_height="match_parent"
-                    />
+                    android:inputType="text"
+                    android:maxLength="20"
+                    android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <Spinner
-                android:layout_marginTop="5dp"
                 android:id="@+id/spinner"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                />
+                android:layout_marginTop="5dp"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
+            android:gravity="center_vertical"
             android:paddingLeft="4dp"
-            android:text="생일"
-            android:gravity="center_vertical"/>
+            android:text="생일" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <CheckBox
                 android:id="@+id/is_lunar"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="음력"/>
+                android:text="음력" />
 
             <DatePicker
                 android:id="@+id/dataPicker"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
-                android:datePickerMode="spinner"
-                android:calendarViewShown="false"/>
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/btnDone"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="@string/edit_done"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/edit_done"
+            android:theme="@style/ButtonStyle" />
     </LinearLayout>
 </RelativeLayout>
