--- a/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_mission.xml
@@ -49,8 +49,7 @@
         <LinearLayout
             android:id="@+id/point_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp">
+            android:layout_height="wrap_content">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -69,7 +68,9 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
-
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"/>
 
         <Button
             android:id="@+id/btn_mission"
