--- a/damda/app/src/main/res/layouts/item/layout/fragment_quiz.xml
+++ b/damda/app/src/main/res/layouts/item/layout/fragment_quiz.xml
@@ -12,21 +12,11 @@
         android:layout_height="48dp">
 
         <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="뽀로로"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="문제는 매일 바뀝니다."
+            android:text="자녀들에게 문제를 낼 수 있습니다."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
