--- a/damda/app/src/main/res/drawable/progressbar_custom.xml
+++ b/damda/app/src/main/res/drawable/progressbar_custom.xml
@@ -2,14 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <corners android:radius="2dp" />
+            <corners android:radius="6dp" />
             <solid android:color="#D5D5D5" />
         </shape>
     </item>
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <corners android:radius="2dp" />
+                <corners android:radius="6dp" />
                 <solid android:color="#B2CCFF" />
             </shape>
         </clip>
@@ -17,8 +17,8 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <corners android:radius="2dp" />
-                <solid android:color="@color/bluebell" />
+                <corners android:radius="6dp" />
+                <solid android:color="#FFA000" />
             </shape>
         </clip>
     </item>
