--- a/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
@@ -29,7 +29,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editEmailLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
             <EditText
                 android:hint="@string/email"
@@ -37,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:maxLines="1"
                 android:maxLength="20"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:layout_height="wrap_content"
                 />
         </com.google.android.material.textfield.TextInputLayout>
