--- a/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
@@ -29,8 +29,8 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editEmailLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:layout_height="wrap_content">
+
 
             <EditText
                 android:hint="@string/email"
